<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="HOCKEY_API_KEY">d1fb52c9a6a4b7c0d860b73434113535</string>

    <string name="app_name">SpotX SDK Demo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sdk_version_string">SDK Version %1$s</string>
    <string name="load_text">Load New Ad</string>
    <string name="launch_text">Launch Ad</string>
    <string name="loading_text">Loading Ad...</string>
    <string name="app_domain">com.spotxchange.demo</string>
    <string name="title_adview_example">SpotX AdView Example</string>
    <string name="title_incontent_example">SpotX In Content Example</string>
    <string name="interstitial">interstitial</string>
    <!-- <string name="default_channel">68801</string> -->
    <string name="default_channel">85394</string>
    <string name="default_mopub_ad_unit_id">5f56564aa4b1487cabb9b59cc3134b93</string>
    <string name="default_mopub_interstitial_ad_unit_id">a12ce801e2b54fa0bb80b25e7562db13</string>
    <string name="cookie_report">Cookie Report</string>
    <string name="sdk_config_report">SDK Configuration</string>
    <string name="debug_info">Debug Info</string>
    <string name="debug_log">Debug Log</string>
    <string name="config_clear">Clear Config</string>

    <string name="test_mraid_open_url">http://www.google.com</string>
    <string name="test_mraid_sms">sms://+14035550185,+13038675309?body=I%27m%20interested%20in%20your%20cheese.</string>
    <string name="test_mraid_cal_description">High Times Meetup</string>
    <string name="test_mraid_cal_location">451 E 58th Ave, Denver, CO 80216</string>
    <string name="test_mraid_cal_start_time">2020-04-20T04:20-07:00</string>
    <string name="test_mraid_cal_end_time">2020-04-20T16:20-07:00</string>
    <string name="test_mraid_picture_url">https://s-media-cache-ak0.pinimg.com/736x/bc/ac/00/bcac00e863006346ab3554a187f49b84.jpg</string>
    <string name="test_channel_reminder">test channel: 85394</string>
    <string name="desc">video ad</string>
    <string name="desc_logo">SpotX Logo</string>
    <string name="title_activity_mopub_main">MopubMainActivity</string>
    <string name="title_activity_mopub_interstitial">Mopub Interstitial</string>
    <string name="title_activity_mopub_rewarded_video">Mopub Rewarded Video</string>
    <string name="mopub_ad_unit_id">MoPub Ad Unit Id</string>
    <string name="spotx_channel_id">SpotX Channel ID"</string>
    <string name="title_activity_easimain">EASI DEMO</string>
    <string name="title_activity_easiinterstitial">EASI Interstitial</string>
    <string name="title_activity_easiincontent">EASI In Content</string>

    <string name="show_interstitial">Show Interstitial</string>
    <string name="show_incontent">Show In Content</string>
    <string name="default_easi_url">http://search.spotxchange.com/js/spotx.js</string>
    <string name="default_easi_params"><![CDATA[
        data-spotx_channel_id=\"85394\"
        data-spotx_content_width=\"300\" data-spotx_content_height=\"300\"
        data-spotx_ad_unit=\"incontent\"
        data-spotx_content_type=\"game\"
        data-spotx_content_page_url=\"http://spotx.ninja\"
        data-spotx_app_bundle=\"com.spotx.ninja.demoapp\"
        data-spotx_device_ifa=\"unknown\"
        data-spotx_autoplay=\"1\"
        data-spotx_content_container_id=\"player\"
        data-spotx_video_slot_can_autoplay=\"1\"
        data-spotx_ad_done_function=\"adDoneFunction\"
        data-spotx_ad_volume=\"0\"
       ]]></string>

</resources>