<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.spotxchange.demo.mopub.MopubInterstitial">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        android:text="@string/title_activity_mopub_interstitial"
        android:id="@+id/titleTextView"
        android:layout_centerHorizontal="true"
        android:gravity="center_vertical"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/mopub_ad_unit_id"
        android:id="@+id/textView4"
        android:layout_below="@+id/titleTextView"
        android:layout_centerHorizontal="true"
        android:textColor="#666666"/>

    <EditText
        android:visibility="visible"
        android:id="@+id/edittext_mopub_ad_unit_id"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:padding="5dp"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="16sp"
        android:hint="@string/default_mopub_interstitial_ad_unit_id"
        android:text="@string/default_mopub_interstitial_ad_unit_id"
        android:inputType="text"
        android:textColorHint="@color/common_signin_btn_light_text_disabled"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:background="#dedede"
        android:layout_alignParentStart="false"
        android:layout_marginBottom="10dp"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/button_load_interstitial"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:text="@string/load_text"
        android:textColor="@color/spotxblue"
        android:textStyle="bold"
        android:layout_below="@+id/edittext_mopub_ad_unit_id"
        android:layout_centerHorizontal="true"
        android:onClick="onClick"
        />

    <Button
        android:id="@+id/button_show_interstitial"
        android:layout_width="200dp"
        android:layout_height="50dp"

        android:text="@string/launch_text"
        android:textColor="@color/spotxblue"
        android:textStyle="bold"
        android:layout_below="@+id/button_load_interstitial"
        android:layout_alignStart="@+id/button_load_interstitial"

        android:onClick="onClick"
        />

</RelativeLayout>
